dynamic routing 1st version, next will try Array Routes inside <Router>, refer to https://github.com/rackt/react-router/blob/latest/docs/guides/basics/RouteConfiguration.md take care of the last const routeConfig array.

--- a/app/index.html
+++ b/app/index.html
@@ -4,8 +4,7 @@
     <title>Redux TodoMVC example</title>
   </head>
   <body>
-    <div class="todoapp" id="root">
-    </div>
+    <div id="root"/>
     <script src="/dist/bundle.js"></script>
   </body>
 </html>
