use route array for Router

--- a/app/index.html
+++ b/app/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Redux TodoMVC example</title>
+    <title>中农新农</title>
   </head>
   <body>
     <div id="root"/>
