--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <title>中农新农</title>
   </head>
   <body>
-    <div id="root"/>
+    <div id="app"/>
     <script src="/dist/bundle.js"></script>
   </body>
 </html>
