--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <div id="app"/>
-    <script src="/dist/bundle.js"></script>
+    <script src="/bundle.js"></script>
   </body>
 </html>
