fix for webpack.config.dev.js, and add woff2 font.

--- a/app/index.html
+++ b/app/index.html
@@ -2,9 +2,10 @@
 <html>
   <head>
     <title>中农新农</title>
+    <link rel="stylesheet" href="/assets/styles/main.css"></link>
   </head>
   <body>
     <div id="app"/>
-    <script src="/bundle.js"></script>
+    <script src="/assets/bundle.js"></script>
   </body>
 </html>
